Fix alignment of availability cards and change media query breakpoint for vertical card display

--- a/app/assets/stylesheets/components/availability.scss
+++ b/app/assets/stylesheets/components/availability.scss
@@ -12,6 +12,7 @@
 .holdings-card {
   display: flex;
   gap: 0.5rem;
+  justify-content: space-between;
   flex-direction: row;
   border-radius: 0.375rem;
   padding: 0.5rem 0rem 0.5rem 0rem;
@@ -38,12 +39,12 @@
   text does not wrap */
 .holdings-card a {
   width: max-content;
-  min-width: 24%;
+  min-width: 23%;
 }
     
 /* If there are multiple cards, they should be consistent widths */
 .holdings-card:has(a:nth-child(n+2)) a {
-  width: 24%;
+  width: 23%;
 }
 
 .holdings-card article.lux-card {
@@ -494,7 +495,7 @@
   color: #717171;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: $bp-large) {
   .holdings-card {
     display: grid;
     width: 100% !important;
@@ -505,7 +506,7 @@
   text does not wrap */
   .holdings-card a {
     width: max-content;
-    min-width: 72%;
+    min-width: 69%;
   }
       
   /* If there are multiple cards, they should be consistent widths */
